# magic-with-coroutines

./: .gitignore  README.md  magic-with-coroutines.pptx
Samples/: .clang-tidy  CMakeLists.txt  Makefile
Samples/common/async_io/: CalcLine.h
Samples/common/event_loop/: EventLoop.cpp  EventLoop.h  unlock_guard.h  work_guard.h
Samples/common/generator/: Iterator.h  Tree.h
Samples/common/io/: print.h
Samples/common/parser/: InputBuffer.cpp  InputBuffer.h
Samples/common/pipe/: Pipe.cpp  Pipe.h
Samples/common/reactor/: EventFd.h  FdSet.h  NotifySignal.h  Reactor.cpp  Reactor.h  ReactorStopper.h  WorkGuard.h
Samples/common/testing/: CoutCapture.h  Delays.h
Samples/coroutines/01-generator/: Fibonacci.cpp  Fibonacci.h  TreeTraversal.cpp  TreeTraversal.h
Samples/coroutines/02-parser/: ProtocolParser.cpp  ProtocolParser.h  WordAwaitable.h
Samples/coroutines/03-async-work/: AsyncWork.h  AsyncWorkMarshalled.h  MarshalledWork.cpp  MarshalledWork.h  UnmarshalledWork.cpp  UnmarshalledWork.h
Samples/coroutines/04-async-io/: CalculatorRepl.h  repl_main.cpp  run_async_io.cpp
Samples/coroutines/04-async-io/async/: AsyncBuffer.h  AsyncIo.h
Samples/coroutines/04-async-io/calc/: CalcClient.cpp  CalcClient.h  CalcServer.cpp  CalcServer.h
Samples/coroutines/05-task-composition/: CalculatorBatch.cpp  CalculatorBatch.h  SolveQuiz.cpp  SolveQuiz.h  TaskChain.cpp  TaskChain.h
Samples/coroutines/return_types/: FinalSuspendCoroutine.h  Generator.h  NeverSuspendCoroutine.h  README.md  ResumableCoroutine.h
Samples/coroutines/return_types/task/: FinalAwaiter.h  Task.h
Samples/no-coroutines/01-generator/: Fibonacci.h  TreeTraversal.h
Samples/no-coroutines/02-parser/: ProtocolParser.cpp  ProtocolParser.h
Samples/no-coroutines/03-async-work/: AsyncWork.h  AsyncWorkMarshalled.h  MarshalledWork.cpp  MarshalledWork.h  UnmarshalledWork.cpp  UnmarshalledWork.h
Samples/no-coroutines/04-async-io/: CalculatorRepl.h  run_async_io.cpp
Samples/no-coroutines/04-async-io/async/: AsyncIo.cpp  AsyncIo.h
Samples/no-coroutines/04-async-io/calc/: CalcClient.cpp  CalcClient.h  CalcServer.cpp  CalcServer.h
Samples/no-coroutines/05-task-composition/: CalculatorBatch.cpp  CalculatorBatch.h  CallbackChain.cpp  CallbackChain.h  SolveQuiz.cpp  SolveQuiz.h
Samples/tests/01-generator/coroutines/: TestGenerator.cpp  TestGenerator.h
Samples/tests/01-generator/no-coroutines/: TestGenerator.cpp  TestGenerator.h
Samples/tests/02-parser/coroutines/: TestParser.cpp  TestParser.h
Samples/tests/02-parser/no-coroutines/: TestParser.cpp  TestParser.h
Samples/tests/03-async-work/coroutines/: TestAsyncWork.cpp  TestAsyncWork.h
Samples/tests/03-async-work/no-coroutines/: TestAsyncWork.cpp  TestAsyncWork.h
Samples/tests/04-async-io/coroutines/: TestCalculator.cpp  TestCalculator.h
Samples/tests/04-async-io/no-coroutines/: TestCalculator.cpp  TestCalculator.h
(+4 files in other folders)
